--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -85,7 +85,7 @@ jobs:
     - name: Install go
       uses: actions/setup-go@v3
       with:
-        go-version: '1.20'
+        go-version: '1.21'
         check-latest: true
     
     - name: Install xcaddy
@@ -107,6 +107,7 @@ jobs:
           --with github.com/caddyserver/forwardproxy@caddy2=github.com/sagernet/forwardproxy@latest \
           --with github.com/imgk/caddy-trojan \
           --with github.com/mholt/caddy-webdav \
+          --with github.com/porech/caddy-maxmind-geolocation \
           --output ./release-tmp/caddy
 
     - name: Rename for Windows 
